tests/errors/when-non-exhaustive/main.pa
enum tree {
  empty
  node int tree tree
}

def size = fun t {
  when t is empty {
    0
  }
}
